# pycmx

./: .flake8  .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: bsky_test.yml  python-package.yml  pythonpublish.yml
docs/: .buildinfo  index.rst
docs/.doctrees/: environment.pickle  index.doctree
docs/source/: classes.rst  conf.py  function.rst  index.rst  modules.rst  pycmx.rst
pycmx/: __init__.py  cdl.py  channel_map.py  cmx_event.py  edit.py  edit_list.py  event.py  parse_cmx.py  parse_cmx_events.py  parse_cmx_statements.py  statements.py  transition.py  util.py
src/pycmx/: __init__.py  cdl.py  edit.py  edit_list.py  event.py  parse_cmx_events.py  parse_cmx_statements.py  statements.py  transition.py  util.py
tests/: .test_parse.py.swp  __init__.py  test_issue_19.py  test_parse.py
tests/edls/: INS4_R1_010417.edl  INS4_R1_DX_092117.edl  INS4_R2_DX_092117.edl  INS4_R3_DX_092117.edl  INS4_R4_DX_092117.edl  INS4_R5_DX_092117.edl  ISSUE_14_conform_edl_issue_01.txt  ISSUE_14_conform_edl_issue_02.edl  ISSUE_14_conform_edl_issue_03.edl  ISSUE_19_unusual01.edl  STP R1 v082517.edl  TEST.edl  ToD_R4_LOCK3.1_030618_Video.edl  adobe_dai109_test.txt  cdl_example01.edl  cdl_example02.cdl  cdl_frmc_example01.edl  cdl_frmc_example02.edl  test_24psf.edl  test_25.edl  test_edl_cdl.edl
