[project]
name = "pycmx"
version = "1.5.0"
description = "Python CMX 3600 Edit Decision List Parser"
authors = [{name = "Jamie Hardt", email= "<jamiehardt@me.com>"}]
license-files = ["LICENSE"]
readme = "README.md"
keywords = [
  'parser',
  'film', 
  'broadcast' 
]
requires-python = '>3.8'
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'License :: OSI Approved :: MIT License',
  'Topic :: Multimedia',
  'Topic :: Multimedia :: Video',
  'Topic :: Text Processing',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14'
]

[project.optional-dependencies]
doc = [
  'sphinx >= 5.3.0',
  'sphinx_rtd_theme >= 1.1.1'
]
dev = [
  'pytest',
]

[project.urls]
Homepage = "https://github.com/iluvcapra/pycmx"
Documentation = "https://pycmx.readthedocs.io/"
Repository = "https://github.com/iluvcapra/pycmx.git"
Tracker = "https://github.com/iluvcapra/pycmx/issues" 

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
doc = ['sphinx', 'sphinx_rtd_theme']


[tool.pyright]
typeCheckingMode = "basic"

[tool.pylint]
max-line-length = 88
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
